Cloud_Native_Devops_With_Kubernetes/kubernetes_projet/fichiers/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-native-project
